--- a/src/main/resources/assets/ghastling_plus/lang/en_us.json
+++ b/src/main/resources/assets/ghastling_plus/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-  "modmenu.nameTranslation.vein_mine": "Ghastling+",
-  "modmenu.descriptionTranslation.vein_mine": "Ride or control the growth of Ghastlings",
-  "modmenu.summaryTranslation.vein_mine": "Ride or control the growth of Ghastlings",
+  "modmenu.nameTranslation.ghastling_plus": "Ghastling+",
+  "modmenu.descriptionTranslation.ghastling_plus": "Ride or control the growth of Ghastlings",
+  "modmenu.summaryTranslation.ghastling_plus": "Ride or control the growth of Ghastlings",
   "gp.growStopped": "The entity's growth is currently paused",
   "gp.growStop": "Paused the entity's growth (growth progress frozen)",
   "gp.notPaused": "The entity is not currently paused",
